@@ -1,3 +1,9 @@
+Fri Dec 19 04:06:34 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * XSC/Parser.cpp:
+
+          . Removed dead code.
+
 Fri Dec 19 04:02:00 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MPC/config/xsc_be.mpb:
